namespace IndependentWork16
{
    interface IBookingValidator
    {
        bool Validate(string user);
    }
}
