namespace IndependentWork16
{
    interface IConfirmationSender
    {
        void Send(string user);
    }
}
